--- a/custom.yaml
+++ b/custom.yaml
@@ -1,6 +1,9 @@
 payload:
+  - DOMAIN-SUFFIX,gvt1.com
   - DOMAIN-SUFFIX,freedownloadmanager.org
   - DOMAIN-SUFFIX,chocolatey.org
   - DOMAIN-SUFFIX,reederapp.com
   - DOMAIN-SUFFIX,mackie100projects.altervista.org
   - DOMAIN-SUFFIX,deepl.com
+
+  
