--- a/custom.yaml
+++ b/custom.yaml
@@ -5,5 +5,4 @@ payload:
   - DOMAIN-SUFFIX,reederapp.com
   - DOMAIN-SUFFIX,mackie100projects.altervista.org
   - DOMAIN-SUFFIX,deepl.com
-
-  
+  - DOMAIN-SUFFIX,pianyuan.org
