--- a/custom.yaml
+++ b/custom.yaml
@@ -6,3 +6,4 @@ payload:
   - DOMAIN-SUFFIX,mackie100projects.altervista.org
   - DOMAIN-SUFFIX,deepl.com
   - DOMAIN-SUFFIX,pianyuan.org
+  - DOMAIN-SUFFIX,sehuatang.net
