--- a/custom.yaml
+++ b/custom.yaml
@@ -6,3 +6,5 @@ payload:
   - DOMAIN-SUFFIX,deepl.com
   - DOMAIN-SUFFIX,pianyuan.org
   - DOMAIN-SUFFIX,sehuatang.net
+  - DOMAIN-SUFFIX,muniucloud.work
+  - DOMAIN-SUFFIX,muniucloud.net
