--- a/custom.yaml
+++ b/custom.yaml
@@ -8,3 +8,5 @@ payload:
   - DOMAIN-SUFFIX,sehuatang.net
   - DOMAIN-SUFFIX,muniucloud.work
   - DOMAIN-SUFFIX,muniucloud.net
+  - DOMAIN-SUFFIX,paoluz.com
+  - DOMAIN-SUFFIX,paoluz.link
