--- a/custom.yaml
+++ b/custom.yaml
@@ -10,3 +10,4 @@ payload:
   - DOMAIN-SUFFIX,muniucloud.net
   - DOMAIN-SUFFIX,paoluz.com
   - DOMAIN-SUFFIX,paoluz.link
+  - DOMAIN-SUFFIX,mega.co.nz  
