--- a/custom.yaml
+++ b/custom.yaml
@@ -14,3 +14,6 @@ payload:
   - DOMAIN-SUFFIX,j05.space
   - DOMAIN-SUFFIX,asus.com
   - DOMAIN-SUFFIX,hcaptcha.com
+  - DOMAIN-SUFFIX,amazonaws.com
+  - DOMAIN-SUFFIX,audio.itunes.apple.com
+  - DOMAIN-SUFFIX,blobstore.apple.com
