--- a/custom.yaml
+++ b/custom.yaml
@@ -16,3 +16,4 @@ payload:
   - DOMAIN-SUFFIX,hcaptcha.com
   - DOMAIN-SUFFIX,amazonaws.com
   - DOMAIN-SUFFIX,blobstore.apple.com
+  - DOMAIN-SUFFIX,dl.sourceforge.net
