--- a/custom.yaml
+++ b/custom.yaml
@@ -17,3 +17,4 @@ payload:
   - DOMAIN-SUFFIX,amazonaws.com
   - DOMAIN-SUFFIX,blobstore.apple.com
   - DOMAIN-SUFFIX,dl.sourceforge.net
+  - DOMAIN-SUFFIX,waqi.info
