--- a/custom.yaml
+++ b/custom.yaml
@@ -20,4 +20,4 @@ payload:
   - DOMAIN-SUFFIX,waqi.info
   - DOMAIN-SUFFIX,javlibrary.com
   - DOMAIN,addons.mozilla.org
-  - DOMAIN,rewards.bing.com
+  - DOMAIN-SUFFIX,bing.com
