--- a/ACL4SSR-NoAuto.ini
+++ b/ACL4SSR-NoAuto.ini
@@ -29,7 +29,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 节点选择
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连
 custom_proxy_group=🚀 节点选择`select`.*
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🎯 全球直连`.*
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]🎯 全球直连`.*
