--- a/ACL4SSR-NoAuto-NoGeoip.ini
+++ b/ACL4SSR-NoAuto-NoGeoip.ini
@@ -12,7 +12,7 @@
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/PingZi-Wing/clash-rules/main/custom.list
-;ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=☁️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
@@ -30,7 +30,7 @@ custom_proxy_group=📺 港台番剧`select`[]DIRECT`[]🚀 节点选择`.*
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]DIRECT`.*
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`.*
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]DIRECT`.*
-;custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`.*
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`.*
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 
