--- a/ACL4SSR-NoAuto-NoGeoip.ini
+++ b/ACL4SSR-NoAuto-NoGeoip.ini
@@ -15,22 +15,24 @@ ruleset=🛡️ 隐私防护,https://raw.githubusercontent.com/DivineEngine/Prof
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/PingZi-Wing/clash-rules/main/custom.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=☁️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
-ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-ruleset=📲 电报信息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+;ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+;ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
+;ruleset=📲 电报信息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=📺 港台番剧,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
+ruleset=🌍 国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Cloudflare/Cloudflare.list
+ruleset=🌍 国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/AppleProxy/AppleProxy.list
+ruleset=🌍 国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/MEGA/MEGA.list
+ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 ruleset=DIRECT,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`.*
 custom_proxy_group=☁️ 微软云盘`select`[]🚀 节点选择`[]DIRECT`.*
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`.*
+;custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`.*
 custom_proxy_group=📺 港台番剧`select`[]DIRECT`[]🚀 节点选择`.*
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]DIRECT`.*
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`.*
-custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]DIRECT`.*
+;custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`.*
+;custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]DIRECT`.*
 custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`.*
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
