--- a/custom.yaml
+++ b/custom.yaml
@@ -27,3 +27,4 @@ payload:
   - DOMAIN-SUFFIX,rewards.microsoft.com
   - DOMAIN-SUFFIX,imgur.com
   - DOMAIN-SUFFIX,imgurinc.com
+  - DOMAIN-SUFFIX,jsdelivr.com
