--- a/custom.yaml
+++ b/custom.yaml
@@ -29,3 +29,4 @@ payload:
   - DOMAIN-SUFFIX,imgurinc.com
   - DOMAIN-SUFFIX,jsdelivr.com
   - DOMAIN-SUFFIX,xeton.dev
+  - DOMAIN-SUFFIX,vivaldi.com
