--- a/rewards.yaml
+++ b/rewards.yaml
@@ -1,7 +1,5 @@
 payload:
-  - 'rewards.microsoft.com',美国节点
-  - 'rewardsplatform.microsoft.com',美国节点
-  - 'gamepassquests.xboxlive.com',美国节点
-  - 'bing.com',美国节点
-
-  
+  - 'rewards.microsoft.com',🇺🇲 美国节点
+  - 'rewardsplatform.microsoft.com',🇺🇲 美国节点
+  - 'gamepassquests.xboxlive.com',🇺🇲 美国节点
+  - 'bing.com',🇺🇲 美国节点
