--- a/rewards.yaml
+++ b/rewards.yaml
@@ -1,5 +1,5 @@
 payload:
-  - 'rewards.microsoft.com',🇺🇲 美国节点
-  - 'rewardsplatform.microsoft.com',🇺🇲 美国节点
-  - 'gamepassquests.xboxlive.com',🇺🇲 美国节点
-  - 'bing.com',🇺🇲 美国节点
+  - 'rewards.microsoft.com'
+  - 'rewardsplatform.microsoft.com'
+  - 'gamepassquests.xboxlive.com'
+  - 'bing.com'
