--- a/custom.yaml
+++ b/custom.yaml
@@ -32,3 +32,4 @@ payload:
   - DOMAIN-SUFFIX,vivaldi.com
   - DOMAIN-SUFFIX,ifixit.com
   - DOMAIN-SUFFIX,v2fly.org
+  - DOMAIN-SUFFIX,bulianglin.com
