--- a/custom.yaml
+++ b/custom.yaml
@@ -39,3 +39,4 @@ payload:
   - DOMAIN-SUFFIX,rarbg.tw
   - DOMAIN-SUFFIX,rarbggo.to
   - DOMAIN-SUFFIX,rarbgtor.org  
+  - DOMAIN-SUFFIX,fractal-design.com
