--- a/Custom_Domain.yaml
+++ b/Custom_Domain.yaml
@@ -5,3 +5,5 @@ payload:
   - 'translate.googleapis.com'
   - 'wwww.googletagmanager.com'
   - 'fractal-design.com'
+  - 'www.powercolor.com'
+  - 'powercolor.com'  
