--- a/Privacy.yaml
+++ b/Privacy.yaml
@@ -97,3 +97,11 @@ payload:
 # > Tenjin
   - DOMAIN,track.tenjin.com
   - DOMAIN,track.tenjin.io
+
+  - IP-CIDR,0.0.0.1/32
+  - IP-CIDR,185.165.169.108/32
+  - IP-CIDR,185.193.38.148/32
+  - IP-CIDR,35.194.26.233/32
+  - IP-CIDR,35.239.57.233/32
+  - IP-CIDR,45.32.105.134/32
+  - IP-CIDR,77.162.125.199/32
