--- a/Custom_Domain.yaml
+++ b/Custom_Domain.yaml
@@ -14,3 +14,7 @@ payload:
   - '.sehuatang.net'
   - 'sehuatang.net'
   - 'addons.mozilla.org'
+  - '.ntp.msn.cn'
+  - 'ntp.msn.cn'
+  - '.ntp.msn.com'
+  - 'ntp.msn.com'
