--- a/Custom_Domain.yaml
+++ b/Custom_Domain.yaml
@@ -18,3 +18,14 @@ payload:
   - 'ntp.msn.cn'
   - '.ntp.msn.com'
   - 'ntp.msn.com'
+  - 'bing.com.cn'
+  - '.bing.com.cn'
+  - 'bing.net'
+  - '.bing.net'
+  - '.bingads.com'
+  - '.bingagencyawards.com'
+  - '.bingapistatistics.com'
+  - '.bingsandbox.com'
+  - '.bingvisualsearch.com'
+  - '.bingworld.com'
+  
